# Comparing-Complexity-and-Performance-of-Interpreter-Techniques

./: CMakeLists.txt  README.md  benchmark.c  benchmark.h  blocked.c  blocked_chaining.c  common.h  computed-goto.c  create_cfgs.sc  create_toolchain.sh  decoupled.c  expand_macro.sh  idecode.h  instructions.h  loader.c  loader.h  log.c  log.h  memory.c  memory.h  mips.h  samples.toolchain.cmake  switch.c  syscall.h.in  syscalls.h  tail-call.c  testsuite.c  toolchain_config.mak
graphs/: graph_blocked.c  graph_blocked_chaining.c  graph_computed_goto.c  graph_switch.c
measurements/: complexity.py  efficiency.py  limit_memory  parallel.py  performance.py  plot.py  requirements.txt  tables.py
measurements/legacy/: benchmark.py  performance_calculate  plot.py
pintool/: InterpreterEfficiency.cpp  makefile.rules
report/: compile
report/background/: Section -- Binary Translators.md
report/initial/: compile
report/methodology/benchmarks/: Section -- Benchmarks.md
report/methodology/case-study/: Section -- Case study choice and justification.md
report/methodology/metrics/: .Section -- Metrics and Evaluation Methods for Complexity.md.swp  Section -- Metrics and Evaluation Methods for Complexity.md  Section -- Metrics and Evaluation Methods for Performance.md
report/metrics/: Section -- Metrics and Evaluation Methods for Complexity.md
report/plan/: Initial Plan -- Architectural Limits of Interpreter Design.bib  Initial Plan -- Architectural Limits of Interpreter Design.md
samples/: CMakeLists.txt  binary_search.c  crc.c  daxpy.c  linked_list.c  npb_make.def  quicksort.c
templates/: interpreter_templates.h
tests/: test.h  test_alu_imm.h  test_alu_reg.h  test_branch_eq_ne.h  test_branch_generic.h  test_j_jal.h  test_jalr.h  test_jr.h  test_load_imm.h  test_lui_imm.h  test_mf.h  test_mt.h  test_shift_imm.h  test_shift_reg.h  test_store_imm.h  test_syscalls.h
utils/: eval_macros.sh  jitcompiler.cpp  pipelined.cpp
